Replace legacy modules with current schedule services